--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Vegetables 新鮮的蔬菜</title>
+    </head>
+    <body>
+        <!--從這開始-->
+    </body>
+</html>
