--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Vegetables 新鮮的蔬菜</title>
+        <link href="style.css" rel="stylesheet">
     </head>
     <body>
         <!--從這開始-->
