--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
     <head>
         <meta charset="utf-8">
         <title>Vegetables 新鮮的蔬菜</title>
+        <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Noto Sans" rel="stylesheet">
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
-        <!--從這開始-->
+        <div class="container">
+            <header class="header">
+                <h1 class="header-title">Vegetables</h1>
+                <div class="header-buttons">
+                    <div class="header-buttons-left">
+                        <img class="header-buttons-left-items" src="images/btn_facebook.png" alt="facebook">
+                        <img class="header-buttons-left-items" src="images/btn_instagram.png" alt="instagram">
+                    </div>
+                    <div class="header-buttons-right">
+                        <p class="header-buttons-right-items">LOGIN</p>
+                        <p class="header-buttons-right-items">JOIN</p>
+                    </div>
+                </div>
+            </header>
+            <nav class="navbar">
+                <!--從這開始-->
+            </nav>
+            <article></article>
+            <footer></footer>
+        </div>
     </body>
 </html>
