--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <meta charset="utf-8">
         <title>Vegetables 新鮮的蔬菜</title>
         <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Noto Sans" rel="stylesheet">
         <link href="style.css" rel="stylesheet">
+
+        <link href="fonts/NotoSans-Regular.ttf" rel="stylesheet">
     </head>
     <body>
         <div class="container">
