在<nav>裡新增了一個清單

--- a/index.html
+++ b/index.html
@@ -23,8 +23,15 @@
                     </div>
                 </div>
             </header>
-            <nav class="navbar">
-                <!--從這開始-->
+            <nav class="nav">
+                <ul class="nav-list">
+                    <!--從這繼續-->
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Vegetables</a></li>
+                    <li><a href="#">Online</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
             </nav>
             <article></article>
             <footer></footer>
