--- a/index.html
+++ b/index.html
@@ -12,28 +12,29 @@
         <div class="container">
             <header class="header">
                 <h1 class="header-title">Vegetables</h1>
-                <div class="header-buttons">
-                    <div class="header-buttons-left">
-                        <img class="header-buttons-left-items" src="images/btn_facebook.png" alt="facebook">
-                        <img class="header-buttons-left-items" src="images/btn_instagram.png" alt="instagram">
+                <div class="header-button">
+                    <div class="header-button-left">
+                        <img class="header-button-left-item" src="images/btn_facebook.png" alt="facebook">
+                        <img class="header-button-left-item" src="images/btn_instagram.png" alt="instagram">
                     </div>
-                    <div class="header-buttons-right">
-                        <p class="header-buttons-right-items">LOGIN</p>
-                        <p class="header-buttons-right-items">JOIN</p>
+                    <div class="header-button-right">
+                        <p class="header-button-right-item">LOGIN</p>
+                        <p class="header-button-right-item">JOIN</p>
                     </div>
                 </div>
             </header>
             <nav class="nav">
                 <ul class="nav-list">
-                    <!--從這繼續-->
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Vegetables</a></li>
-                    <li><a href="#">Online</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li class="nav-list-item"><a href="#" class="nav-list-item-link">Home</a></li>
+                    <li class="nav-list-item"><a href="#" class="nav-list-item-link">About Us</a></li>
+                    <li class="nav-list-item"><a href="#" class="nav-list-item-link">Vegetables</a></li>
+                    <li class="nav-list-item"><a href="#" class="nav-list-item-link">Online</a></li>
+                    <li class="nav-list-item"><a href="#" class="nav-list-item-link">Contact</a></li>
                 </ul>
             </nav>
-            <article></article>
+            <article>
+                <!--從這開始-->
+            </article>
             <footer></footer>
         </div>
     </body>
