--- a/index.html
+++ b/index.html
@@ -32,10 +32,35 @@
                     <li class="nav-list-item"><a href="#" class="nav-list-item-link">Contact</a></li>
                 </ul>
             </nav>
-            <article>
-                <!--從這開始-->
+            <article class="main">
+                <img class="main-image" src="images/img_main_pumpkin.png" title="pumpkin 南瓜">
+                <div class="main-content">
+                    <div class="main-content-vegetables">
+                        <p class="main-content-vegetables-title">Vegetables</p>
+                        <div class="main-content-vegetables-image">
+                            <img class="main-content-vegetables-image-item" src="images/img_vegetables_carrot.png" title="carrot 胡蘿蔔">
+                            <img class="main-content-vegetables-image-item" src="images/img_vegetables_corn.png" title="corn 玉米">
+                            <img class="main-content-vegetables-image-item" id="image-end" src="images/img_vegetables_pepper.png" title="pepper 甜椒">
+                        </div>
+                    </div>
+                    <div class="main-content-contact">
+                        <p class="main-content-contact-title">Contact</p>
+                        <div class="main-content-contact-words">
+                            <p class="main-content-contact-words-up">
+                                For any questions or suggestions about Vegetables, Vegetables Club or 
+                                your online order you can contact Vegetables Customer Service by phone, 
+                                email or post and we’ll be happy to help.
+                            </p>
+                            <p class="main-content-contact-words-down">
+                                E-mail : Vegetables@aaabbccc.com<br>PHONE : +886-123-456-789
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </article>
-            <footer></footer>
+            <footer>
+                
+            </footer>
         </div>
     </body>
 </html>
