--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                     </div>
                 </div>
             </article>
-            <footer>
-                
+            <footer class="footer">
+                <p class="footer-content">Copyrights 2017 Vegetables cise / Design by Vegetables</p>
             </footer>
         </div>
     </body>
