完成連結與hover等細節設定

--- a/index.html
+++ b/index.html
@@ -11,15 +11,21 @@
     <body>
         <div class="container">
             <header class="header">
-                <h1 class="header-title">Vegetables</h1>
+                <h1 class="header-title">
+                    <a href="#" class="header-title-link">Vegetables</a>
+                </h1>
                 <div class="header-button">
                     <div class="header-button-left">
-                        <img class="header-button-left-item" src="images/btn_facebook.png" alt="facebook">
-                        <img class="header-button-left-item" src="images/btn_instagram.png" alt="instagram">
+                        <a href="#" class="header-button-left-link">
+                            <img class="header-button-left-link-item" src="images/btn_facebook.png" alt="facebook">
+                        </a>
+                        <a href="#" class="header-button-left-link">
+                            <img class="header-button-left-link-item" src="images/btn_instagram.png" alt="instagram">
+                        </a>
                     </div>
                     <div class="header-button-right">
-                        <p class="header-button-right-item">LOGIN</p>
-                        <p class="header-button-right-item">JOIN</p>
+                        <p class="header-button-right-item"><a href="#" class="header-button-right-item-link">LOGIN</a></p>
+                        <p class="header-button-right-item"><a href="#" class="header-button-right-item-link">JOIN</a></p>
                     </div>
                 </div>
             </header>
@@ -36,7 +42,7 @@
                 <img class="main-image" src="images/img_main_pumpkin.png" title="pumpkin 南瓜">
                 <div class="main-content">
                     <div class="main-content-vegetables">
-                        <p class="main-content-vegetables-title">Vegetables</p>
+                        <p class="main-content-vegetables-title"><a href="#" class="main-content-vegetables-title-link">Vegetables</a></p>
                         <div class="main-content-vegetables-image">
                             <img class="main-content-vegetables-image-item" src="images/img_vegetables_carrot.png" title="carrot 胡蘿蔔">
                             <img class="main-content-vegetables-image-item" src="images/img_vegetables_corn.png" title="corn 玉米">
@@ -44,7 +50,7 @@
                         </div>
                     </div>
                     <div class="main-content-contact">
-                        <p class="main-content-contact-title">Contact</p>
+                        <p class="main-content-contact-title"><a href="#" class="main-content-contact-title-link">Contact</a></p>
                         <div class="main-content-contact-words">
                             <p class="main-content-contact-words-up">
                                 For any questions or suggestions about Vegetables, Vegetables Club or 
