解決<footer>沒有延展置底的問題

--- a/index.html
+++ b/index.html
@@ -10,60 +10,62 @@
     </head>
     <body>
         <div class="container">
-            <header class="header">
-                <h1 class="header-title">
-                    <a href="#" class="header-title-link">Vegetables</a>
-                </h1>
-                <div class="header-button">
-                    <div class="header-button-left">
-                        <a href="#" class="header-button-left-link">
-                            <img class="header-button-left-link-item" src="images/btn_facebook.png" alt="facebook">
-                        </a>
-                        <a href="#" class="header-button-left-link">
-                            <img class="header-button-left-link-item" src="images/btn_instagram.png" alt="instagram">
-                        </a>
-                    </div>
-                    <div class="header-button-right">
-                        <p class="header-button-right-item"><a href="#" class="header-button-right-item-link">LOGIN</a></p>
-                        <p class="header-button-right-item"><a href="#" class="header-button-right-item-link">JOIN</a></p>
-                    </div>
-                </div>
-            </header>
-            <nav class="nav">
-                <ul class="nav-list">
-                    <li class="nav-list-item"><a href="#" class="nav-list-item-link">Home</a></li>
-                    <li class="nav-list-item"><a href="#" class="nav-list-item-link">About Us</a></li>
-                    <li class="nav-list-item"><a href="#" class="nav-list-item-link">Vegetables</a></li>
-                    <li class="nav-list-item"><a href="#" class="nav-list-item-link">Online</a></li>
-                    <li class="nav-list-item"><a href="#" class="nav-list-item-link">Contact</a></li>
-                </ul>
-            </nav>
-            <article class="main">
-                <img class="main-image" src="images/img_main_pumpkin.png" title="pumpkin 南瓜">
-                <div class="main-content">
-                    <div class="main-content-vegetables">
-                        <p class="main-content-vegetables-title"><a href="#" class="main-content-vegetables-title-link">Vegetables</a></p>
-                        <div class="main-content-vegetables-image">
-                            <img class="main-content-vegetables-image-item" src="images/img_vegetables_carrot.png" title="carrot 胡蘿蔔">
-                            <img class="main-content-vegetables-image-item" src="images/img_vegetables_corn.png" title="corn 玉米">
-                            <img class="main-content-vegetables-image-item" id="image-end" src="images/img_vegetables_pepper.png" title="pepper 甜椒">
+            <div class="notfooter">
+                <header class="header">
+                    <h1 class="header-title">
+                        <a href="#" class="header-title-link">Vegetables</a>
+                    </h1>
+                    <div class="header-button">
+                        <div class="header-button-left">
+                            <a href="#" class="header-button-left-link">
+                                <img class="header-button-left-link-item" src="images/btn_facebook.png" alt="facebook">
+                            </a>
+                            <a href="#" class="header-button-left-link">
+                                <img class="header-button-left-link-item" src="images/btn_instagram.png" alt="instagram">
+                            </a>
+                        </div>
+                        <div class="header-button-right">
+                            <p class="header-button-right-item"><a href="#" class="header-button-right-item-link">LOGIN</a></p>
+                            <p class="header-button-right-item"><a href="#" class="header-button-right-item-link">JOIN</a></p>
                         </div>
                     </div>
-                    <div class="main-content-contact">
-                        <p class="main-content-contact-title"><a href="#" class="main-content-contact-title-link">Contact</a></p>
-                        <div class="main-content-contact-words">
-                            <p class="main-content-contact-words-up">
-                                For any questions or suggestions about Vegetables, Vegetables Club or 
-                                your online order you can contact Vegetables Customer Service by phone, 
-                                email or post and we’ll be happy to help.
-                            </p>
-                            <p class="main-content-contact-words-down">
-                                E-mail : Vegetables@aaabbccc.com<br>PHONE : +886-123-456-789
-                            </p>
+                </header>
+                <nav class="nav">
+                    <ul class="nav-list">
+                        <li class="nav-list-item"><a href="#" class="nav-list-item-link">Home</a></li>
+                        <li class="nav-list-item"><a href="#" class="nav-list-item-link">About Us</a></li>
+                        <li class="nav-list-item"><a href="#" class="nav-list-item-link">Vegetables</a></li>
+                        <li class="nav-list-item"><a href="#" class="nav-list-item-link">Online</a></li>
+                        <li class="nav-list-item"><a href="#" class="nav-list-item-link">Contact</a></li>
+                    </ul>
+                </nav>
+                <article class="main">
+                    <img class="main-image" src="images/img_main_pumpkin.png" title="pumpkin 南瓜">
+                    <div class="main-content">
+                        <div class="main-content-vegetables">
+                            <p class="main-content-vegetables-title"><a href="#" class="main-content-vegetables-title-link">Vegetables</a></p>
+                            <div class="main-content-vegetables-image">
+                                <img class="main-content-vegetables-image-item" src="images/img_vegetables_carrot.png" title="carrot 胡蘿蔔">
+                                <img class="main-content-vegetables-image-item" src="images/img_vegetables_corn.png" title="corn 玉米">
+                                <img class="main-content-vegetables-image-item" id="image-end" src="images/img_vegetables_pepper.png" title="pepper 甜椒">
+                            </div>
+                        </div>
+                        <div class="main-content-contact">
+                            <p class="main-content-contact-title"><a href="#" class="main-content-contact-title-link">Contact</a></p>
+                            <div class="main-content-contact-words">
+                                <p class="main-content-contact-words-up">
+                                    For any questions or suggestions about Vegetables, Vegetables Club or 
+                                    your online order you can contact Vegetables Customer Service by phone, 
+                                    email or post and we’ll be happy to help.
+                                </p>
+                                <p class="main-content-contact-words-down">
+                                    E-mail : Vegetables@aaabbccc.com<br>PHONE : +886-123-456-789
+                                </p>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </article>
+                </article>
+            </div>
             <footer class="footer">
                 <p class="footer-content">Copyrights 2017 Vegetables cise / Design by Vegetables</p>
             </footer>
